<resources>
    <string name="app_name">Jukebox</string>
    <string name="home_tab_name">Home</string>
    <string name="now_playing_tab_name">Now Playing</string>
    <string name="queue_tab_name">Queue</string>
    <string name="room_name_input">Room name</string>
    <string name="prev_button">prev-file</string>
    <string name="next_file">next-file</string>
    <string name="pause_button">pause</string>
    <string name="volume_up_button">vu</string>
    <string name="volume_down_button">vd</string>
    <string name="room_name_submit">join</string>
</resources>